# rolan

./: .gitignore  ApplicationItem.cpp  ApplicationItem.h  CMakeLists.txt  LICENSE  README.md  entrywindow.cpp  entrywindow.h  icon.h  main.cpp  r.pro  style.qss
.github/workflows/: blank.yml  main.yml  ubuntu.yml
includes/: ApplicationItem.h  CustomTitleBar.h  entrywindow.h
resources/: r.qrc  titleBar.qss
src/: ApplicationItem.cpp  CustomTitleBar.cpp  entrywindow.cpp
unix/: linux_icon.cpp
windows/: CMakeLists.txt  windows_icon.cpp
